new draft about text

--- a/app/views/incidents/show.html.erb
+++ b/app/views/incidents/show.html.erb
@@ -75,15 +75,34 @@
     <!-- 	    end if -->
 <!-- 	    end if -->
 	     <section class="note box main" id="about">
-			<h2>About this information</h2>
-			<p></p>
-			<p><em><a href="http://detentionlogs.com.au/about/glossary" title="Detention Logs Glossary">Find definitions of terms in the glossary</a></em></p>
+			<h2 id="aboutthisinformation">About this information</h2>
 			
-			<h3>Disclaimer</h3>
-			<p>The data published here has been provided by THIS IS HOLDING TEXT the Department of immigration and citizenship under the freedom of information act 1982.  Detention logs has only altered data that contains defamatory imputations or may be in contempt of legal proceedings.</p>
-			<p>If you see anything that is defamatory or in contempt of court please contact us.</p>
-		 </section>
- 	     <nav class="sideways-nav supporting main">
+			<h3 id="whatisanincident">What is an ‘incident’?</h3>
+			
+			<p>An “incident” in this context is an event in one of Australia’s immigration detention facilities which has been recorded by the facility’s staff. The private contractors that run the detention network, including companies <a href="http://detentionlogs.com.au/about/glossary/#serco">Serco</a>, <a href="http://detentionlogs.com.au/about/glossary/#IHMS">IHMS</a> and <a href="http://detentionlogs.com.au/about/glossary/#G4S">G4S</a>, are required to file incident reports to the <a href="http://detentionlogs.com.au/about/glossary/#DIAC">Australian Government Department of immigration and Citizenship (DIAC)</a>, where they are archived in a centralised database.</p>
+			
+			<p>DIAC are ultimately responsible for the welfare of people held in the detention network. They use these incident reports as one way to understand and track occurrences and conditions in their facilities.</p>
+			
+			<p>The types of incidents described in the reports collected by Detention Logs include births, deaths, illnesses, accidents/injuries, self-harms, complaints, escapes, media presence, protests and more. <a href="http://detentionlogs.com.au/data/incidents">You can browse the reports with our Incident Explorer</a>.</p>
+			
+			<p>The summary incident data and any attached Incident Detail Reports have been provided by the Department of Immigration and Citizenship, released under the <a href="http://www.oaic.gov.au/foi-portal/about_foi.html">Freedom of Information Act 1982 (Cth)</a>. The Freedom of Information (FOI) system allows any member of the public to lawfully access government information.</p>
+			
+			<h2 id="descriptionoffields">Description of fields</h2>
+			<dl>
+			<dt>Incident Number</dt>
+			<dd>The unique string of characters used by DIAC to identify a single incident.</dd>
+			
+			<dt>Occurred On</dt>
+			<dd>The date and time that the incident described in the report was to recorded to have occurred at.</dd>
+			</dl>
+			
+			
+			<h2 id="flaganissue">Flag an issue</h2>
+			
+			<p>If you have any issues, concerns or questions regarding this data please <a href="&#x6d;&#97;&#105;&#x6c;&#x74;&#x6f;&#x3a;&#100;&#101;&#x74;&#x65;&#x6e;&#x74;&#105;&#x6f;&#x6e;&#108;&#111;&#x67;&#x73;&#64;&#103;&#x6d;&#97;&#x69;&#x6c;&#x2e;&#x63;&#x6f;&#x6d;">&#99;&#x6f;&#110;&#x74;&#x61;&#99;&#x74; &#117;&#x73;</a>.</p>
+	     </section>
+			
+		<nav class="sideways-nav supporting main">
 		    <ul>
 			    <li class="next"><a href="" title="to the next incident report">Next incident report</a></li>
 	    	    <li class="previous"><a href="" title="to the previous incident report">Pevious incident report</a></li>
