--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -237,6 +237,19 @@ input:-ms-input-placeholder { color: #555;}
 		background-color: $fade;
 	}
 }
+.supporting-heading {
+	color: darken($fade, 20%);
+}
+.incident-filter {
+	input[role="button"] {
+		background-color: darken($fade, 10%);
+		color: #fff;
+		&:hover,
+		&:focus {
+			background-color: $primary;
+		}
+	}
+}
 
 .has-detailed-report {
 	a.incident-number {
@@ -288,6 +301,10 @@ input:-ms-input-placeholder { color: #555;}
 	font-size: 18px;
 	font-size: 1.125rem; /* 18px */
 }
+.supporting-heading {
+	font-size: $scale-1;
+	margin: 0;
+}
 .supporting {
 	line-height: 1.4em;
 }
@@ -307,6 +324,8 @@ input:-ms-input-placeholder { color: #555;}
 	}
 }
 .query-results-description {
+	padding-top: 0;
+	text-decoration: none;
 	font-weight: normal;
 	.start-date,
 	.end-date {
@@ -413,6 +432,16 @@ input:-ms-input-placeholder { color: #555;}
 	padding-top: $scale-4;
 	padding-bottom: $scale-4;
 }
+
+.site-footer {
+	border-top: 1px $contrast solid ;
+	margin-top: 48px;
+	margin-top: 3rem;
+	padding-top: 2rem;
+	padding-bottom: 32px;
+	padding-bottom: 2rem;
+}
+
 
 .box {
 	padding: 24px 5% 8px;
@@ -631,18 +660,24 @@ input:-ms-input-placeholder { color: #555;}
 }
 .page-link {
 		dt {
-			color: $fade;		
+			color: $fade;	
+			display: inline-block;
+			font-size: $scale-n2;
 			&:after {
 				content: ":";
 			}
 		}
 		dd {
-			margin: 0;
-			a {
-				word-wrap: break-word;
-			}
+			display: inline-block;
+			margin:0 0 0 4px;
+			margin:0 0 0 .25rem;
+		}
+		input {
+			border: 1px $fade solid;
+			padding: .25rem;
 		}
 }
+
 
 /* @end Incidents list */
 
@@ -904,30 +939,73 @@ input {
 }
 
 .incident-filter {
-	label {
+	float: none;
+	clear: both;
+	overflow: hidden;
+	border: 1px $fade solid;
+	padding-bottom: 8px;
+	padding: .5rem;
+	margin: 0 -.5rem;
+	label,
+	input,
+	select {
+		font-size: 14px;
 		font-size: $scale-n1;
+		display: block;		
+	}
+	label {
+		margin-top: 8px;
+		margin-top: .5rem;
+		font-weight: bold;
+	}
+	select {
+		font-size: 18px;
+ 		font-size: $scale-1;
+ 		max-width: 100%;
+	}
+	fieldset {
+		float: none;
+		clear: both;
+	}
+	.start-date,
+	.end-date {
+		label {
+			clear: both;
+			float: none;
+		}
+		select {
+			float: left;
+			display: block;
+			margin-right: 4px;
+			margin-right: .25rem;
+		}
+	}
+	.has-detail-report {
+		float: left;
+		clear: left;
+		input, label {
+			display: inline-block;
+		}
+		input {
+			width: 1em;
+		}
+	}
+	input[role="button"] {
+		border: 0;
+		font-weight: bold;
 		text-transform: uppercase;
-		display: block;
+		font-size: $scale-1;
+		padding: .25rem .75rem;
+		clear: right;
+		float: right;
 	}
 }
 
-/* @end Forms */
-
-
-/* @group Layout */
-
-
-.site-footer {
-	border-top: 1px $contrast solid ;
-	margin-top: 48px;
-	margin-top: 3rem;
-	padding-top: 2rem;
-	padding-bottom: 32px;
-	padding-bottom: 2rem;
+.page-link input {
+	
 }
 
-
-/* @end Layout */
+/* @end Forms */
 
 /* @group Tools */
 
@@ -1010,6 +1088,7 @@ input {
 
 /* @group Navigation */
 .sideways-nav {
+	padding-top: 20px;
 	padding-top: $scale-1;
 	overflow: hidden;
 	li {
@@ -1024,6 +1103,36 @@ input {
 	}
 }
 /* @end Navigation */
+
+/* @start Forms */
+	.incident-filter {
+		fieldset {
+			float: left;
+			clear: none;
+			width: 50%;
+			select {
+				max-width: 95%;
+			}
+		}
+		.start-date,
+		.end-date {
+			select {
+				font-size: 12px;
+				font-size: $scale-n2;
+			}
+		}
+		.has-detail-report {
+			float: none;
+			clear: both;
+		}
+		input[role="button"] {
+			float: none;
+			clear: both;
+			margin-top: 8px;
+			margin-top: .5rem;
+		}
+	}
+/* @end Forms */
 
 }
 
@@ -1348,43 +1457,45 @@ header .primary-nav {
 /* @end Navigation */
 
 /* @group Forms */
-	.mail-list {
-		margin-left: auto;
-		margin-right: auto;
+
+.mail-list {
+	margin-left: auto;
+	margin-right: auto;
+	text-align: left;
+	input {
 		text-align: left;
-		input {
-			text-align: left;
-			margin-bottom: 1rem;
-			&[type="email"] {
-				max-width: 28rem;
-				padding: 1rem 0 1rem 1.5rem;
-				border-right: 0;
-				display:block;
-				clear: left;
-				border-radius: 4px 0px 0px 4px;
-				border-radius: .25rem 0px 0px .25rem;
-			}
-		}
-	legend {
-			margin: 0 0 14px;
-			margin: 0 0 1rem;
+		margin-bottom: 1rem;
+		&[type="email"] {
+			max-width: 28rem;
+			padding: 1rem 0 1rem 1.5rem;
+			border-right: 0;
+			display:block;
+			clear: left;
+			border-radius: 4px 0px 0px 4px;
+			border-radius: .25rem 0px 0px .25rem;
 		}
 	}
-	.btn {
-		max-width: 8rem;
-		display: block;
-		clear: right;
-		padding: 1rem;
-		border-radius: 4px 0 0 4px;
-		border-radius: 0 .25rem .25rem 0;
+legend {
+		margin: 0 0 14px;
+		margin: 0 0 1rem;
 	}
-	.mail-list input,
-	.mail-list .btn {
-		margin-left: 0;
-		margin-right: 0;
-		float: left;
-	}
-	
+}
+.mail-list .btn {
+	max-width: 8rem;
+	display: block;
+	clear: right;
+	padding: 1rem;
+	border-radius: 4px 0 0 4px;
+	border-radius: 0 .25rem .25rem 0;
+}
+.mail-list input,
+.mail-list .btn {
+	margin-left: 0;
+	margin-right: 0;
+	float: left;
+}
+
+
 /* @end Forms */
 }
 
@@ -1531,6 +1642,28 @@ header .primary-nav {
 /* @end Incidents list */
 /* @end Page Structure */
 
+/* @group Forms */
+
+.incident-filter {
+	padding: 1rem;
+	margin: 0 -1rem;
+	fieldset {
+		width: 40%;
+	}
+	.start-date {
+		clear: left;
+	}
+	.start-date,
+	.end-date {
+		select {
+			font-size: $scale-1;
+		}
+	}
+}
+
+
+/* @end Forms */
+
 }
 @media all and (min-width: 55em) {
 /* @group Page Structure */
@@ -1543,6 +1676,36 @@ header .primary-nav {
 /* @end Incidents list */
 /* @end Page Structure */
 
+/* @group Forms */
+
+.incident-filter {
+	fieldset {
+		float: left;
+		clear: none;
+		width: auto;
+		padding-right: 8px;
+		padding-right: .5rem;
+	}
+	.type,
+	.location {
+		width: 20%;
+	}
+	.start-date {
+		clear: none;
+	}
+	.has-detail-report {
+		float: none;
+		clear: both;
+	}
+	input[role="button"] {
+		float: none;
+		clear: both;
+	}
+}
+
+
+/* @end Forms */
+
 }
 @media all and (min-width: 58em) {
 /* @group Page Structure */
@@ -1554,6 +1717,31 @@ header .primary-nav {
 	}
 /* @end Incidents list */
 /* @end Page Structure */
+
+/* @group Forms */
+
+.incident-filter {
+	fieldset {
+		padding-bottom: 20px;
+		padding-bottom: 1.25rem;
+	}
+	.has-detail-report {
+		margin-left: 0;
+		padding-top: 26px;
+		padding-top: 1.6rem;
+		float: left;
+		clear: none;
+	}
+	input[role="button"] {
+		margin-top: 32px;
+		margin-top: 2rem;
+		float: right;
+		clear: right;
+	}
+}
+
+
+/* @end Forms */
 
 }
 @media all and (min-width: 62em) {
@@ -1586,6 +1774,7 @@ header .primary-nav {
 /* @end Incidents list */
 /* @end Page Structure */
 
+
 }
 @media all and (min-width: 64em) {
 /* @group Page Structure */
@@ -1597,6 +1786,22 @@ header .primary-nav {
 	}
 /* @end Incidents list */
 /* @end Page Structure */
+
+/* @group Forms */
+
+.incident-filter {
+	fieldset {
+		padding-right: 16px;
+		padding-right: 1rem;
+	}
+	.has-detail-report {
+		margin-left: 16px;
+		margin-left: 1rem;
+	}
+}
+
+
+/* @end Forms */
 
 }
 @media all and (min-width: 67em) {
