switchend date pickers to input

--- a/app/views/incidents/index.html.erb
+++ b/app/views/incidents/index.html.erb
@@ -123,11 +123,11 @@
 	</fieldset>
 	<fieldset class="start-date">
 		<label>Start Date</label>
-		<%= date_select("incident", "start_date", :use_short_month => true) %>
+			<input type="date" id="start_date" name="start_date" placeholder="dd.mm.yyyy" min="2009-10-03" max="2011-05-26">
 	</fieldset>
 	<fieldset class="end-date">
 		<label>End Date</label>
-			<%= date_select("incident", "end_date", :use_short_month => true) %>
+			<input type="date" id="start_date" name="start_date" placeholder="dd.mm.yyyy" min="2009-10-03" max="2011-05-26">
 	</fieldset>
 	<fieldset class="has-detail-report">
 		<label for="has_detail_report">Has detail report</label>
