added default input styles

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -136,6 +136,15 @@ nav {
 		}
 	}
 }
+input {
+	border-style: solid;
+	border-color: #444;
+	border-width: 1px;
+	padding-left: 2px;
+	padding-left: .14rem;
+	padding-right: 2px;
+	padding-right: .14rem;
+}
 /* @end Elements */
 
 /* @group Colours */
