fixed location/incident relationships

--- a/app/views/incidents/index.html.erb
+++ b/app/views/incidents/index.html.erb
@@ -54,7 +54,7 @@
 			<section class="incident-primary">
 				<span class="field-label">Occured On</span><time class="incident-occured-on"><%= incident.occured_on.strftime("%d %b %Y %H:%M") %></time>
 				<span class="field-label">Type</span><section class="incident-type"><%= incident.incident_type %></section>
-				<span class="field-label">Location</span><section class="incident-location"><%= incident.location %></section>
+				<span class="field-label">Location</span><section class="incident-location"><%= incident.location.name %></section>
 			</section>
 			<section class="incident-body">
 				<span class="field-label incident-summary-label">Incident Summary</span><section class="incident-summary discrete"><p><%= incident.summary %></p></section>
