commented out, currently superfluous crumb

--- a/app/views/incidents/show.html.erb
+++ b/app/views/incidents/show.html.erb
@@ -1,6 +1,6 @@
 	
 	<nav class="breadcrumbs supporting main">
-		<p><a href="http://detentionlogs.com.au/data/">Data</a> &gt; <a href="http://detentionlogs.com.au/data/incidents/">Incidents</a> &gt; <%= @incident.incident_number %></p>
+		<p><!-- <a href="http://detentionlogs.com.au/data/">Data</a> &gt;  --><a href="http://detentionlogs.com.au/data/incidents/">Incidents</a> &gt; <%= @incident.incident_number %></p>
 	</nav>
 	<article class="incident" role="">
 	    <section class="incident-primary main">
