--- a/app/views/incidents/adopt.html.erb
+++ b/app/views/incidents/adopt.html.erb
@@ -3,5 +3,36 @@
 </nav>
 
 <article class="main reading">
-	<a href="https://www.righttoknow.org.au/new/diac/?title=FOI%20Request%20for%20Detail%20Incident%20Report%20<%= @incident.incident_number %>;body=To%20the%20Department%20of%20Immigration%20and%20Citizenship%2C%0A%0ADear%20Sir%2FMadam%2C%0A%0AUnder%20the%20Freedom%20of%20Information%20Act%201982%20(Cth)%20I%20request%20the%20following%20document%3A%0A%0AIncident%20Detail%20Report%20<%= @incident.incident_number %>%20from%20the%20Department%27s%20Compliance%2C%20Case%20Management%2C%20Detention%20and%20Settlement%20Portal.%20I%20also%20request%20any%20documents%20attached%20to%20the%20detailed%20report.%0A%0AKind%20Regards%2C%0A%0A****ADD%20YOUR%20NAME%20HERE%20BEFORE%20SENDING%20REQUEST****">Make a public FOI request</a>
+	<h1>Adopt Incident <%= @incident.incident_number %></h1>
+	
+	<p class="lede">Adopt Incident <%= @incident.incident_number %> and bring to light more information about what occurred.</p>
+
+	<p>It’s easy to submit a request to the Australian Government for the Incident Detail Report for this incident. The Freedom of Information (FOI) system allows anyone to lawfully access government documents. We’ve used Right To Know’s FOI tool so you can use the system with just a few clicks.</p>
+	
+	<p><strong><a href="https://www.righttoknow.org.au/new/diac/?title=FOI%20Request%20for%20Detail%20Incident%20Report%20<%= @incident.incident_number %>;body=To%20the%20Department%20of%20Immigration%20and%20Citizenship%2C%0A%0ADear%20Sir%2FMadam%2C%0A%0AUnder%20the%20Freedom%20of%20Information%20Act%201982%20(Cth)%20I%20request%20the%20following%20document%3A%0A%0AIncident%20Detail%20Report%20<%= @incident.incident_number %>%20from%20the%20Department%27s%20Compliance%2C%20Case%20Management%2C%20Detention%20and%20Settlement%20Portal.%20I%20also%20request%20any%20documents%20attached%20to%20the%20detailed%20report.%0A%0AKind%20Regards%2C%0A%0A****ADD%20YOUR%20NAME%20HERE%20BEFORE%20SENDING%20REQUEST****" title="opens a prefilled Freedom of Information request using the Right To Know FOI tool">Submit a public FOI request for Detail Incident Report <%= @incident.incident_number %></a></strong></p>
+	
+	<p>The Detail Incident Report reveals more of the Government’s information about the incident such as who was involved, what happened, and which other incidents are related. These reports are extremely useful for investigating the detention network and provide important information about a range of detention issues (see an <a href="link">example of an Incident Detail Report</a>).</p>
+	
+	<h3 id="why-do-it">Why do it</h3>
+	
+	<p>This is a way for everybody to help increase transparency and accountability in Australian detention facilities. If this is an incident that you think warrants further investigation, if you think it raises more questions than it answers or if you simply want more details about it then this is how you can contribute.</p>
+	
+	<h3 id="what-to-expect">What to expect</h3>
+	
+	<p>Lodging a freedom of information request is easy. There is no application fee so all you need to do is <a href="https://www.righttoknow.org.au/new/diac/?title=FOI%20Request%20for%20Detail%20Incident%20Report%20<%= @incident.incident_number %>;body=To%20the%20Department%20of%20Immigration%20and%20Citizenship%2C%0A%0ADear%20Sir%2FMadam%2C%0A%0AUnder%20the%20Freedom%20of%20Information%20Act%201982%20(Cth)%20I%20request%20the%20following%20document%3A%0A%0AIncident%20Detail%20Report%20<%= @incident.incident_number %>%20from%20the%20Department%27s%20Compliance%2C%20Case%20Management%2C%20Detention%20and%20Settlement%20Portal.%20I%20also%20request%20any%20documents%20attached%20to%20the%20detailed%20report.%0A%0AKind%20Regards%2C%0A%0A****ADD%20YOUR%20NAME%20HERE%20BEFORE%20SENDING%20REQUEST****" title="opens a prefilled Freedom of Information request using the Right To Know FOI tool">follow the ‘submit a request’ link</a>, where you’ll find a pre-written request for the detailed report of the incident summary you were just exploring (Incident [incident:number]).</p>
+	
+	<p>The work of communicating back and forth with your FOI decision maker gets handled through the Right to Know website, a fantastic tool that makes it easy to use Australia’s FOI system. At Right To Know requests are listed publicly which means that others can help you with your request if anything comes up, and once released, the documents you request go public straight away. We’ll add those documents to the incident reports on our site so everyone can access this public information.</p>
+	
+	<p>Once the Department of Immigration and Citizenship has acknowledged your request, one of the first things they’ll do is request an extension of time. We recommend you don’t consent to this extension because the documents you’ll be requesting aren’t very long and it shouldn’t take much time to process.</p>
+	
+	<p>If you request too many incidents the Department may try to charge you or say that it’s an unreasonable diversion of their resources and refuse to process it. We recommend that you limit the amount of incidents you request to between one and five to reduce any potential costs.</p>
+	
+	<p><strong><a href="https://www.righttoknow.org.au/new/diac/?title=FOI%20Request%20for%20Detail%20Incident%20Report%20<%= @incident.incident_number %>;body=To%20the%20Department%20of%20Immigration%20and%20Citizenship%2C%0A%0ADear%20Sir%2FMadam%2C%0A%0AUnder%20the%20Freedom%20of%20Information%20Act%201982%20(Cth)%20I%20request%20the%20following%20document%3A%0A%0AIncident%20Detail%20Report%20<%= @incident.incident_number %>%20from%20the%20Department%27s%20Compliance%2C%20Case%20Management%2C%20Detention%20and%20Settlement%20Portal.%20I%20also%20request%20any%20documents%20attached%20to%20the%20detailed%20report.%0A%0AKind%20Regards%2C%0A%0A****ADD%20YOUR%20NAME%20HERE%20BEFORE%20SENDING%20REQUEST****" title="opens a prefilled Freedom of Information request using the Right To Know FOI tool">Submit a public FOI request for Detail Incident Report <%= @incident.incident_number %></a></strong></p>
+	
+	<h3 class="discrete">More information</h3>
+	<ul class="discrete">
+	<li><a href="http://detentionlogs.com.au/contribute">Learn more about adopting an incident and other ways to help out.</a></li>
+	<li><a href="http://www.oaic.gov.au/foi-portal/about_foi.html">Learn more about FOI</a></li>
+	<li><a href="https://www.righttoknow.org.au/">Check out the Right To Know project</a>.</li>
+	</ul>
 </article>
