--- a/app/views/incidents/index.html.erb
+++ b/app/views/incidents/index.html.erb
@@ -62,6 +62,7 @@
 				<section class="incident-secondary">
 					<span class="field-label">Location Details</span><section class="incident-location-details"><p><%= incident.location_details %></p></section>
 					<span class="field-label"><abbr title="Incident">In.</abbr> Number</span><a href="<%=  url_for incident %>" class="incident-number" title="Get more information about Incident <%= incident.incident_number %>"><%= incident.incident_number %> <span class="incident-link">see&nbsp;details<i> &rarr;</i></span></a>
+					<% if incident.detailed_report.path %><a href="<%= incident.detailed_report.url %>" title="Download the Incident Detail Report for this incident to find more information" class="docs-icon supporting distinct-download">Detail Report</a><% end %>
 				</section>
 			</article>
 		</li>
