commented out editors additions

--- a/app/views/incidents/show.html.erb
+++ b/app/views/incidents/show.html.erb
@@ -53,28 +53,22 @@
 		    </ul>
 	    </nav>
 -->
-<!-- 	    If there are related documents or investigations  or editors notes -->
+<!-- 	    If there are related documents or investigations  or editors notes
 	    <section class="discrete editors-additional main" id="editors-additions">
 	    	<h2 class="discrete">Detention Logs&rsquo; additions</h2>
-	<!-- 	    	If there are notes -->
 		    <h3 id="editors-notes">Editor&rsquo;s Notes</h3>
 		    	<p><p>Kogi try-hard pork belly iphone, pour-over vegan bushwick skateboard wayfarers pug.  Disrupt master cleanse authentic, before they sold out wolf mlkshk food truck hella direct trade  fanny pack etsy carles +1.  Irony cardigan bespoke quinoa brunch tumblr.</p>
 		    	<p>Four loko pop-up vice ennui stumptown, brunch before they sold out small batch vinyl.  Ethnic irony selvage organic hashtag.  Pickled polaroid ugh mumblecore wayfarers.  Ugh pickled thundercats chillwave.</p></p>
-	<!-- 	    end if -->
-	<!-- 	    If there are related documents -->
 		    <h3 class="related-documents" id="attachments">Related Documents</h3>
 		    <ul>
 		    	<li class="related-documents"><a href=""><cite>Coroner's Report</cite></a></li>
 		    </ul>
-	<!-- 	    end if -->		    
-	<!-- 	    If there are investigations -->
 		    <h3 class="related-investigations" id="related-investigations">Related Investigations</h3>
 		    <ul>
 		    	<li class="related-investigations"><a href=""><cite>Removals Story</cite></a></li>
 		    </ul>
-	    </section>
-    <!-- 	    end if -->
-<!-- 	    end if -->
+	    </section> -->
+
 	     <section class="note box main" id="about">
 			<h2 id="aboutthisinformation">About this information</h2>
 			
