removed js readonly as it was preventing select all on ios

--- a/app/views/incidents/index.html.erb
+++ b/app/views/incidents/index.html.erb
@@ -32,7 +32,7 @@
 
 <dl class="page-link supporting">
 	<dt class="">Link for these results</dt>
-		<dd><input value="<%= "#{request.protocol}#{request.host_with_port}#{request.fullpath}" %>" title="url to share or bookmark these results" readonly></dd>
+		<dd><input value="<%= "#{request.protocol}#{request.host_with_port}#{request.fullpath}" %>" title="url to share or bookmark these results"></dd>
 </dl>
 <section class="incident-table">
 	<ul class="header-row supporting">
