--- a/app/views/layouts/incidents.html.erb
+++ b/app/views/layouts/incidents.html.erb
@@ -58,7 +58,7 @@
 
 <!-- Grab Google CDN's jQuery. fall back to local if necessary -->
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-		<script>window.jQuery || document.write("<script src='../assets/jquery-1.9.1.min.js'>\x3C/script>")</script>
+		<script>window.jQuery || document.write("<script src='/assets/jquery-1.9.1.min.js'>\x3C/script>")</script>
 	    <%= javascript_include_tag "fixers", "site" %>
 
 	</body>
