--- a/app/views/layouts/incidents.html.erb
+++ b/app/views/layouts/incidents.html.erb
@@ -33,7 +33,7 @@
 			<ul class="primary-nav">
 				<li><a href="http://detentionlogs.com.au/incidents">Data</a></li>
 				<li><a href="http://detentionlogs.com.au/investigations">Investigations</a></li>
-				<li><a href="http://detentionlogs.com.au/about">About</a></li>
+				<li><%= link_to "About", page_path("about") %></li>
 			</ul>
 			<ul class="supporting">
 				<li><a href="http://detentionlogs.com.au/about/resources">Resources</a></li>
