--- a/app/views/layouts/incidents.html.erb
+++ b/app/views/layouts/incidents.html.erb
@@ -21,7 +21,7 @@
 			<ul class="primary-nav">
 				<li><a href="http://detentionlogs.com.au/data/incidents">Data</a></li>
 				<li><a href="http://detentionlogs.com.au/investigations">Investigations</a></li>
-				<li><a href="http://detentionlogs.com.au/about">About</a></li>
+				<li><a href="http://detentionlogs.com.au/principles">Principles</a></li>
 			</ul>
 		</nav>
     </header>
@@ -33,12 +33,11 @@
 			<ul class="primary-nav">
 				<li><a href="http://detentionlogs.com.au/incidents">Data</a></li>
 				<li><a href="http://detentionlogs.com.au/investigations">Investigations</a></li>
-				<li><%= link_to "About", page_path("about") %></li>
+				<li><a href="http://detentionlogs.com.au/about/principles">Our Principles</a></li>		
 			</ul>
 			<ul class="supporting">
-				<li><a href="http://detentionlogs.com.au/about/resources">Resources</a></li>
 				<li><a href="http://detentionlogs.com.au/about/glossary">Glossary</a></li>
-				<li><a href="http://detentionlogs.com.au/about/principles">Our Principles</a></li>				
+		
 			</ul>
 		</nav>
 		<ul class="footer-contact contact  supporting">
@@ -46,13 +45,12 @@
 			<li><a class="github" href="https://github.com/DetentionLogs/" title="Detention Logs on Github" rel="me">GitHub</a></li>
 		</ul>
 		<ul class="footer-contact contact  supporting">
-			<li><a class="email" href="">Contact</a></li>
+		<!--	<li><a class="email" href="">Contact</a></li> -->
 <!-- 			<li><a class="phone google-voice" href="">+08 173 453 235</a></li> -->
 		</ul>
 		<article id="copyright" class="supporting">
-			<h2 class="discrete">Using this content / Copyright</h2>
-			<p>Umami synth dreamcatcher skateboard, pickled pop-up occupy pug.  Williamsburg shoreditch pop-up, street art keytar before they sold out authentic sriracha semiotics truffaut hella plaid wes anderson church-key carles.  Gastropub aesthetic +1, blue bottle ethnic hoodie cliche.</p>
-			<p>Semiotics actually bespoke, high life street art +1 carles fanny pack neutra williamsburg craft beer whatever 90's.  Forage truffaut wes anderson, narwhal photo booth food truck actually swag next level.</p>
+			<!--<h2 class="discrete">Using this content / Copyright</h2> -->
+
 		</article>
 	</footer>
 
